Rename button, stop overflow of spell descriptions and add 'plus' to spell bars

--- a/client/src/LevelTable/level-table.module.scss
+++ b/client/src/LevelTable/level-table.module.scss
@@ -12,6 +12,14 @@
   background: black;
   color: white;
   padding: 10px;
+
+  :local(.buttonGroup) {
+    display: flex;
+
+    :local(.padding) {
+      padding-right: 5px;
+    }
+  }
 }
 
 :local(.spellsContainer) {
@@ -19,5 +27,4 @@
   justify-content: left;
   align-items: center;
   flex-direction: row;
-
 }
